--- a/bfim/jsp/pom.xml
+++ b/bfim/jsp/pom.xml
@@ -1,81 +1,88 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.fincher.bfim</groupId>
-  <artifactId>bfim-jsp</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>BFIM JSP</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>com.fincher.bfim</groupId>
-      <artifactId>bfim-core</artifactId>
-      <version>1.0</version>
-      <scope>compile</scope>
-    </dependency>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.fincher.bfim</groupId>
+	<artifactId>bfim-jsp</artifactId>
+	<packaging>war</packaging>
+	<version>1.0</version>
+	<name>BFIM JSP</name>
+	<url>http://maven.apache.org</url>
+	<dependencies>
+		<dependency>
+			<groupId>com.fincher.bfim</groupId>
+			<artifactId>bfim-core</artifactId>
+			<version>1.0</version>
+			<scope>compile</scope>
+		</dependency>
 
-<!--
-    <dependency>
-      <groupId>com.fincher</groupId>
-      <artifactId>text-to-html-plugin</artifactId>
-      <version>1.0</version>
-      <scope>compile</scope>
-    </dependency>
--->
+		<!-- <dependency> <groupId>com.fincher</groupId> <artifactId>text-to-html-plugin</artifactId> 
+			<version>1.0</version> <scope>compile</scope> </dependency> -->
 
-    <dependency>
-		<groupId>javax.servlet</groupId>
-		<artifactId>servlet-api</artifactId>
-		<version>2.5</version>
-		<scope>provided</scope>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
+	</dependencies>
 
-  <build>
-      <finalName>bfim_jsp</finalName>
-      <plugins>
-          <plugin>
-	      <artifactId>maven-compiler-plugin</artifactId>
-	      <version>2.3.2</version>
-	      <configuration>
-	          <compilerVersion>1.6</compilerVersion>
-	          <source>1.6</source>
-	          <target>1.6</target>
-	      </configuration>
-	  </plugin>
+	<build>
+		<finalName>bfim_jsp</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<compilerVersion>1.6</compilerVersion>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
 
-	  <plugin>
-          <groupId>com.fincher</groupId>
-	      <artifactId>text-to-html-plugin</artifactId>
-          <version>1.0</version>
-	      <executions>
-	          <execution>
-		      	<phase>package</phase>
-		      		<goals>
-		          		<goal>genhtml</goal>
-		      		</goals>
-		  		</execution>
-	      </executions>
-	      <configuration>
-	          <outputDir>target/html</outputDir>
-              <filesets>
-                  <fileset> 
-                      <directory>src/main/java/com/fincher/bfim/jsp</directory>
-                      <includes>
-		                  <include>*.java</include>
-		              </includes>
-		          </fileset>
-		          
-		          <fileset>
-		          	<directory>src/main/webapp</directory>
-		          	<includes>
-		          		<include>*.jsp</include>
-		          	</includes>
-		          </fileset>
-		      </filesets>
-	      </configuration>
-	  </plugin>
-      </plugins>
-  </build>
+			<plugin>
+				<groupId>com.fincher</groupId>
+				<artifactId>text-to-html-plugin</artifactId>
+				<version>1.0</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>genhtml</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<outputDir>target/html</outputDir>
+					<filesets>
+						<fileset>
+							<directory>src/main/java/com/fincher/bfim/jsp</directory>
+							<includes>
+								<include>*.java</include>
+							</includes>
+						</fileset>
+
+						<fileset>
+							<directory>src/main/webapp</directory>
+							<includes>
+								<include>*.jsp</include>
+							</includes>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>central</id>
+			<name>central</name>
+			<url>http://www.fincherhome.com:8081/nexus/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>snapshots</name>
+			<url>http://www.fincherhome.com:8081/nexus/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
