--- a/bfim/core/pom.xml
+++ b/bfim/core/pom.xml
@@ -1,6 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
+	<parent>
+		<groupId>com.fincher</groupId>
+		<artifactId>com.fincher</artifactId>
+		<version>1.0.0</version>
+	</parent>
+	
 	<groupId>com.fincher.bfim</groupId>
 	<artifactId>bfim-core</artifactId>
 	<packaging>jar</packaging>
@@ -9,17 +16,7 @@
 	<url>http://maven.apache.org</url>
 
 	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<compilerVersion>1.7</compilerVersion>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-
+		<plugins>			
 			<plugin>
 				<groupId>com.fincher</groupId>
 				<artifactId>text-to-html-plugin</artifactId>
@@ -45,18 +42,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
-	
-	<distributionManagement>
-		<repository>
-			<id>central</id>
-			<name>central</name>
-			<url>http://www.fincherhome.com:8081/nexus/content/repositories/releases</url>
-		</repository>
-		<snapshotRepository>
-			<id>snapshots</id>
-			<name>snapshots</name>
-			<url>http://www.fincherhome.com:8081/nexus/content/repositories/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>	
+	</build>		
 </project>
